Doc/99管理対象外/10_個人フォルダ/Giphe/8月/Python/20200811Python.txt
+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-
+-+-+-+-+-+-+-+-Python作業メモ+-+-+-+-+-+-+-+-
+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+


■エラー
★self.user_id = tk.StringVar()
                    ^
SyntaxError: invalid character in identifier
→エクセルで編集した文字列では不正な半角空白文字になっている場合がある
→ctrl + fでエラー空白を正常空白に置き換える必要がある

★RecursionError: maximum recursion depth exceeded in comparison
Fatal Python error: Cannot recover from stack overflow.
Python runtime state: initialized
→無限ループになる

★認証に失敗
→コマンドラインから開く
"C:\Program Files (x86)\WinSCP\WinSCP.exe" sftp://giphesroom.wordpress.comhRHbYgvEsRniXRxENiXi@sftp.wp.com /console


■ショートカット

photoshop
選択範囲解除 ctrl + D

■課題

課題①：
※選択可能種族はすでに存在する進化先を選べないようにする必要あり
※選択後再びSelectしているので無駄にDB負荷がかかってしまっている（ぶっちゃツリーデータで取得済みなので必要ない）



課題⑩：
数百件程度であれば自力で作ることも可能
geneランクによって進化可能な種族を判定する仕組みも必要

課題㉖：
ゲームロード時表示されるデータがDbから取得されていない。（DATA_1などsetting.csから定数を取得している）

課題㉗：
ロード時の選択プレーヤーネームとsignupやloadボタンが同列に表示されてしまう
→プレーヤーネームの表示はload_game選択時にプルダウンで表示する
→メニュー項目格納候補→

課題㉘：
キャラメイク画面のバグを解消

課題㉙：
キャラメイクと種族作成画面の互換性、子画面のupdFlgがtrueの場合親画面を更新する必要




■メモ
★python技術
①イベント後エラーメッセージを指定の場所に表示可能
→ファンクションでgird配置指定で生成する（Validateを走らせた後実行有無を判定）

★クラス
・Player
　●コマンド
　①上下左右
　②スタートボタン→上下左右

・プラットフォーム
　●メソッド
　①描写
　②天候、風、イベント等

・sprites
　●コマンド
　①攻撃（敵）

・object
　●コマンド
　①ポップ表示（名称）
　②効果音


★要件
Displayの作成
ログイン→ホーム画面でキャラクター選択
→初期画面
①主人公データ読み込み
・キャラクタ、種族、遺伝子、地域、ダンジョン等マスタ取得
・左上にステータス表示
・描画を一度で済ます？

②表示（Spritesシート）
・キャラクタ、アニメーション３D
→SpritesシートPlayerクラス実装
・周りのオブジェクト
→SpritesシートBuildingクラス実装？？
・NPC、敵
→SpritesシートMobクラス実装
・シンボル
→SpritesシートSymbolクラス実装

③プラットフォーム（Platformシート）
〇表示範囲
→拡大可能、ライキン参考、上から視点、町は家など建物
〇表示物
→視点移動時は地面と木だけの描写、操作停止時にオブジェクトを描画する
〇再描画
→プレイヤーコマンド選択時

④操作
・十字キー移動
→視点移動、キャラ移動（キャラにフォーカス時）
・



コマンド

★pygameの課題
・スーパーファミコンレベル
・2Dカジュアルゲームの作成が多い
・3Dは得意ではない
作れるゲームですがスーパーファミコン時代の2Dカジュアルゲームならできます。
昨今の3DのリアルタイムのFPSの様なゲームの作成は描画処理の問題があり難しいです。


★DBについて
①UPDATEするときは文字列、数値のチェックが必要なのでフォーマットファイルの作成はある意味合理的なのかも
②①の場合、テーブルの改修が入った場合にフォーマットファイルの修正が追加になるので改修に弱いといえる
③

■進捗07/23
GUIの作成終了→ゲーム本体の製造
・初期画面（タイトル、データ表示、NEWGAME、開発者メニュー等）
〇NEWGAME画面ではランダムでデータを作成することが可能ランダム特化なので、signupメソッドを使用する
→完全な新規画面、signupのようなGUIではなくプラットフォームはpygame
→実装はゲームで典型的なキャラメイク画面を想定
→新規種族、キャラは不可。ガチャ要素なので既存のキャラクター、種族、遺伝子からランダムで設定される。
→★アサイン中

〇開発者メニュー
→作成済みGUI画面、データの生成等を行うsignup：キャラ、create_race：種族など
→【未実装】locationで任意の場所に建物を設置、ダンジョンメイク（ダンジョンキャラはsignupで作成）
→★8月中旬目安


■8月～PJマップ作製GUI
★要件
・マップを作成したい
・マップ構成→登録先（field,location,point)
・point単位でidを持たせるので検索時の負担は大きいかも
・DBのみの仮想環境の実装、リモートで接続？DBサーバというのがあるらしい
　いわくバッチなどを直接流すので24分→5分ほどの短縮が可能らしい
・fieldは国単位、locationは地方単位、pointは地点単位（マス）５×５の関係は消滅でよい気がする
・機能をどこまで実装するか
　国単位、地方単位、地点単位
・左下に作成時のマップを表示
　地方単位でポイントを集合させ、国を形成
・左上にツリービューを表示
・地方は農場を城壁内に作るか外に作るか
→外の場合、これらの土地は容易に略奪可能
→採取ポイントは極力小さく
→採掘、農場ポイントはランダムに点在している（spotごと）
→スポットはランダムに変動する（バッチで操作）
→採取スポットのレベルは高い土地と低い土地が存在する
→採取スポットが高い土地は生産性が高い
→スポットを等高線図で視覚的に表示できるとよい
→天気図も欲しいかもしれない
→ポイント準拠ではない
→土地の高さ、川の必要性
→地方ごとに土地の傾斜を決めてあげることで計算による平均傾斜の割り出しが可能
→傾斜は定数、最高点の数、それぞれの高さと平地の数で決定する
→それぞれのスポットの高さは、最高到達点との距離、と傾斜で三角比から求めた最高点となる
→傾斜以外は平地とする、平均高度から逆算することもおそらく可能と思われる
→最高高度→準最高... というように高度を決めていく必要がある、高度の決め方は不明。地学は知らない
→あるいはデータ分析DeepLearningでデータの扱い方を学ぶか。
・一度DeepLearningに戻る必要がある
→高度を決めると川を作成可能。川のふもとには人里が作成可能
→川は海まで流れる。高度に比例して流水量を決定する
→流路は基本的に高→低に流れる、平地では直線で海まで（演算難易度高）
・山の中は国を作成不可
・山は採掘ポイントが多い、平野は農地が多い→山のふもとは人の生活圏が拡大しやすい
・王国シミュ→採取で資源を獲得→獲得量に応じて人口が増加
→人口が一定に達したときに地方が生まれる、一番資金を集めたものが領主となる
→領主が生まれたら領主は領地から税を得られる

・マップ部５：８の長方形型→世界地図とするタッチすることで一部を拡大可能？
・ドラッグでマップを移動可能（スマホの場合スワイプ）？
・クリックで選択個所を編集可能→地方のマップ、ドラッグで建築物の移動等が可能
・左下で選択した地方を右上に表示
・川の流路編集？
・川は分岐する→流量に比例
・気温、偏西風等、寒い地域の人種、
→寒冷地：技術力が発展、温暖：バランスよく発展、南地域：農場が発展、砂漠地帯：身体能力が発展
→登録処理はDELETE/INSERTのみ
・登録先は王国、地方、スポットの3種類
→登録方法は地形登録（スポット）のみ



■次回
・内部イベント作成

